[ci skip] update lorenz curve d734a86d291b3ce79b3213c1c09523a3e7eccf4a

--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c1ccfb2d",
+   "id": "7a52f3cd",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4507b603",
+   "id": "a668c928",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff081f21",
+   "id": "1babf668",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -66,6 +66,7 @@
     "import pandas as pd\n",
     "from pyarrow.parquet import read_table\n",
     "\n",
+    "import altair\n",
     "import numpy as np\n",
     "import polars as pl\n",
     "import skrub\n",
@@ -79,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc217c9b",
+   "id": "5f8d2a4a",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -97,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "daae8d0a",
+   "id": "66677991",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88f3e517",
+   "id": "6f31aa5e",
    "metadata": {},
    "source": [
     "\n",
@@ -132,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f13c61aa",
+   "id": "910c2ca4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b91cf5f",
+   "id": "095d768a",
    "metadata": {},
    "source": [
     "\n",
@@ -155,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "651b5e45",
+   "id": "a33643b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53986dfc",
+   "id": "28ed1b30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f9cce11",
+   "id": "e1854efe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c1cc8b3",
+   "id": "14f20f69",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -220,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2af679aa",
+   "id": "4965ef12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2be22ec",
+   "id": "98f4abbe",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -265,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96e4b4d9",
+   "id": "31159e74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bd36908",
+   "id": "ab8e0136",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -301,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1666a9ab",
+   "id": "beafc293",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -318,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bf55778",
+   "id": "af1cf3ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "639946d4",
+   "id": "8cb4dc9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9109cf5b",
+   "id": "85b5e211",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcd3abe2",
+   "id": "999d5e69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57edd95e",
+   "id": "c4712b44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8a5d7e4",
+   "id": "54ee9c82",
    "metadata": {},
    "source": [
     "\n",
@@ -417,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4da573a7",
+   "id": "bee82cd3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60554bf4",
+   "id": "0245d6dc",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -446,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "600e000e",
+   "id": "77478d01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,13 +479,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0f4d0d5",
+   "id": "85de9f11",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import altair\n",
-    "\n",
-    "\n",
     "altair.Chart(electricity_lagged.tail(100).skb.eval()).transform_fold(\n",
     "    [\n",
     "        \"load_mw\",\n",
@@ -504,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44fad3f6",
+   "id": "dd1ca7cf",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -516,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54b3a9d1",
+   "id": "e9a148ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21c993cf",
+   "id": "213d892b",
    "metadata": {},
    "source": [
     "\n",
@@ -538,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1de32b65",
+   "id": "b3fb3132",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b65e430e",
+   "id": "614c7ce7",
    "metadata": {},
    "source": [
     "\n",
@@ -561,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e88d60b7",
+   "id": "bfd54ebb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ca0a74a",
+   "id": "bb7bb488",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76b03af0",
+   "id": "841240ad",
    "metadata": {},
    "source": [
     "\n",
@@ -630,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38241560",
+   "id": "8ae18ad5",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -642,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a67ddfdd",
+   "id": "32fc9617",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd2c0a6e",
+   "id": "fffc096d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44ab11fb",
+   "id": "24623cdb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,7 +746,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26357797",
+   "id": "8f91d6dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,7 +758,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37c95471",
+   "id": "47f9d23e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -806,7 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8277a6a5",
+   "id": "d0a57787",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -834,7 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09e979a6",
+   "id": "e3df8537",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -865,7 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bb602ed",
+   "id": "9863284c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28dcc3cc",
+   "id": "ffad834f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1908d147",
+   "id": "cc3dbdae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -943,7 +941,145 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08563728",
+   "id": "b5861c88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "def lorenz_curve(observed_value, predicted_value, n_samples=1_000):\n",
+    "    \"\"\"Compute the Lorenz curve for a given true and predicted values.\"\"\"\n",
+    "\n",
+    "    def gini_index(cum_proportion_population, cum_proportion_y_true):\n",
+    "        from sklearn.metrics import auc\n",
+    "\n",
+    "        return 1 - 2 * auc(cum_proportion_population, cum_proportion_y_true)\n",
+    "\n",
+    "    observed_value = np.asarray(observed_value)\n",
+    "    predicted_value = np.asarray(predicted_value)\n",
+    "\n",
+    "    sort_idx = np.argsort(predicted_value)\n",
+    "    observed_value_sorted = observed_value[sort_idx]\n",
+    "\n",
+    "    original_n_samples = observed_value_sorted.shape[0]\n",
+    "    cum_proportion_population = np.cumsum(np.ones(original_n_samples))\n",
+    "    cum_proportion_population /= cum_proportion_population[-1]\n",
+    "\n",
+    "    cum_proportion_y_true = np.cumsum(observed_value_sorted)\n",
+    "    cum_proportion_y_true /= cum_proportion_y_true[-1]\n",
+    "\n",
+    "    gini_model = gini_index(cum_proportion_population, cum_proportion_y_true)\n",
+    "\n",
+    "    cum_proportion_population_interpolated = np.linspace(0, 1, n_samples)\n",
+    "    cum_proportion_y_true_interpolated = np.interp(\n",
+    "        cum_proportion_population_interpolated,\n",
+    "        cum_proportion_population,\n",
+    "        cum_proportion_y_true,\n",
+    "    )\n",
+    "\n",
+    "    return pl.DataFrame(\n",
+    "        {\n",
+    "            \"cum_population\": cum_proportion_population_interpolated,\n",
+    "            \"cum_observed\": cum_proportion_y_true_interpolated,\n",
+    "        }\n",
+    "    ).with_columns(\n",
+    "        pl.lit(gini_model).alias(\"gini_index\"),\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "def plot_lorenz_curve(cv_predictions, n_samples=1_000):\n",
+    "    \"\"\"Plot the Lorenz curve for a given true and predicted values.\"\"\"\n",
+    "\n",
+    "    results = []\n",
+    "    for cv_idx, predictions in enumerate(cv_predictions):\n",
+    "        results.append(\n",
+    "            lorenz_curve(\n",
+    "                observed_value=predictions[\"load_mw\"],\n",
+    "                predicted_value=predictions[\"predicted_load_mw\"],\n",
+    "                n_samples=n_samples,\n",
+    "            ).with_columns(\n",
+    "                pl.lit(cv_idx).alias(\"cv_idx\"),\n",
+    "                pl.lit(\"model\").alias(\"model\"),\n",
+    "            )\n",
+    "        )\n",
+    "\n",
+    "        results.append(\n",
+    "            lorenz_curve(\n",
+    "                observed_value=predictions[\"load_mw\"],\n",
+    "                predicted_value=predictions[\"load_mw\"],\n",
+    "                n_samples=n_samples,\n",
+    "            ).with_columns(\n",
+    "                pl.lit(cv_idx).alias(\"cv_idx\"),\n",
+    "                pl.lit(\"oracle\").alias(\"model\"),\n",
+    "            )\n",
+    "        )\n",
+    "\n",
+    "    results = pl.concat(results)\n",
+    "\n",
+    "    gini_stats = results.group_by(\"model\").agg(\n",
+    "        [\n",
+    "            pl.col(\"gini_index\")\n",
+    "            .mean()\n",
+    "            .map_elements(lambda x: f\"{x:.4f}\", return_dtype=pl.String)\n",
+    "            .alias(\"gini_mean\"),\n",
+    "            pl.col(\"gini_index\")\n",
+    "            .std()\n",
+    "            .map_elements(lambda x: f\"{x:.4f}\", return_dtype=pl.String)\n",
+    "            .alias(\"gini_std_dev\"),\n",
+    "        ]\n",
+    "    )\n",
+    "\n",
+    "    results = results.join(gini_stats, on=\"model\").with_columns(\n",
+    "        pl.format(\"{} ({} +/- {})\", \"model\", \"gini_mean\", \"gini_std_dev\").alias(\n",
+    "            \"model_label\"\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "    diagonal_chart = (\n",
+    "        altair.Chart(\n",
+    "            pl.DataFrame(\n",
+    "                {\n",
+    "                    \"cum_population\": [0, 1],\n",
+    "                    \"cum_observed\": [0, 1],\n",
+    "                    \"model_label\": \"Non-informative model\",\n",
+    "                }\n",
+    "            )\n",
+    "        )\n",
+    "        .mark_line(strokeDash=[4, 4], opacity=0.5, tooltip=True)\n",
+    "        .encode(\n",
+    "            x=altair.X(\n",
+    "                \"cum_population:Q\",\n",
+    "                title=\"Fraction of observations sorted by predicted label\",\n",
+    "            ),\n",
+    "            y=altair.Y(\"cum_observed:Q\", title=\"Cumulative observed load proportion\"),\n",
+    "            color=altair.Color(\"model_label:N\", legend=altair.Legend(title=\"Models\")),\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "    model_chart = (\n",
+    "        altair.Chart(results)\n",
+    "        .mark_line(opacity=0.3, tooltip=True)\n",
+    "        .encode(\n",
+    "            x=altair.X(\n",
+    "                \"cum_population:Q\",\n",
+    "                title=\"Fraction of observations sorted by predicted label\",\n",
+    "            ),\n",
+    "            y=altair.Y(\"cum_observed:Q\", title=\"Cumulative observed load proportion\"),\n",
+    "            color=altair.Color(\"model_label:N\", legend=altair.Legend(title=\"Models\")),\n",
+    "            detail=\"cv_idx:N\",\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "    return model_chart + diagonal_chart\n",
+    "\n",
+    "\n",
+    "plot_lorenz_curve(cv_predictions, n_samples=500).interactive()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc31046c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1027,7 +1163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb2df66b",
+   "id": "10999d14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1110,8 +1246,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "347630bc",
-   "metadata": {},
+   "id": "c779cf16",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
     "def plot_residuals_by_month(cv_predictions):\n",
@@ -1193,7 +1331,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26284126",
+   "id": "670cfbdd",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "beb39317",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1215,7 +1363,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf8cbe5e",
+   "id": "fa02f4fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1225,7 +1373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ca908d5",
+   "id": "896cd63c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1235,7 +1383,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a23367d7",
+   "id": "e017f25b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1256,7 +1404,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a05bd862",
+   "id": "8941a7d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1272,7 +1420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66808c34",
+   "id": "1186377a",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1288,7 +1436,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8201e89",
+   "id": "6adecb41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1302,7 +1450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e46cc3f9",
+   "id": "b8b71758",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1314,7 +1462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b75186d8",
+   "id": "e97659c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1330,7 +1478,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a61d2309",
+   "id": "525e5c6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1398,7 +1546,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84edeb54",
+   "id": "1edf2165",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1410,7 +1558,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97e9e774",
+   "id": "6e21d48f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1421,7 +1569,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7fe4453",
+   "id": "e7e59abf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1457,7 +1605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a3b69b8",
+   "id": "3e1c8c0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1467,7 +1615,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db3abddc",
+   "id": "ce881875",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1512,7 +1660,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "680843f9",
+   "id": "3a753cf9",
    "metadata": {},
    "outputs": [],
    "source": []
