--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4b234fe0",
+   "id": "2b5420f3",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e478e141",
+   "id": "9681bc28",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34a11edc",
+   "id": "b1351ebf",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -66,6 +66,7 @@
     "import pandas as pd\n",
     "from pyarrow.parquet import read_table\n",
     "\n",
+    "import altair\n",
     "import numpy as np\n",
     "import polars as pl\n",
     "import skrub\n",
@@ -79,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cd8876f",
+   "id": "61198d89",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -97,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ad15806",
+   "id": "0c6fa6be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcf17052",
+   "id": "3667eadb",
    "metadata": {},
    "source": [
     "\n",
@@ -132,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81bf1543",
+   "id": "b01fbda9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fbd2b39",
+   "id": "a8c2c84a",
    "metadata": {},
    "source": [
     "\n",
@@ -155,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e921689",
+   "id": "73047bed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d921902",
+   "id": "2649004a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "542735d8",
+   "id": "9387ad27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b5eefe1",
+   "id": "153b90a3",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -220,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "290f98a9",
+   "id": "dd50e874",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a53d7282",
+   "id": "ee567c3d",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -265,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "350efd95",
+   "id": "ab3670d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f1dab8b",
+   "id": "625ee060",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -301,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6b00629",
+   "id": "9a268b34",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -318,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f455bc69",
+   "id": "9b0ae74b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2af753fd",
+   "id": "8de45296",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d44ef30",
+   "id": "bef205a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa0333a2",
+   "id": "aff6d14d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a0b4516",
+   "id": "741ae4f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a94c1402",
+   "id": "6648fb71",
    "metadata": {},
    "source": [
     "\n",
@@ -417,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7eb3e437",
+   "id": "953168b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a9d0d04",
+   "id": "b3c418c3",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -446,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e0d1cdc",
+   "id": "e64032b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,13 +479,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71d3778c",
+   "id": "0edce149",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import altair\n",
-    "\n",
-    "\n",
     "altair.Chart(electricity_lagged.tail(100).skb.eval()).transform_fold(\n",
     "    [\n",
     "        \"load_mw\",\n",
@@ -504,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cb21cb2",
+   "id": "0b043b50",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -516,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d326231",
+   "id": "001643cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f04f3c4f",
+   "id": "34c6f6fa",
    "metadata": {},
    "source": [
     "\n",
@@ -538,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c875349c",
+   "id": "ff15f4f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c8f6886",
+   "id": "69af2c60",
    "metadata": {},
    "source": [
     "\n",
@@ -561,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd0a8d73",
+   "id": "173685ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0786333",
+   "id": "467a80f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3603f27e",
+   "id": "a6c81035",
    "metadata": {},
    "source": [
     "\n",
@@ -630,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b66afe91",
+   "id": "8e0d3b92",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -642,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "985fd440",
+   "id": "358dc1d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63b6fdcf",
+   "id": "910177dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d97dbdc",
+   "id": "abd65522",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,7 +746,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5d3f2be",
+   "id": "4c6acf31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,7 +758,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29911650",
+   "id": "aa7a0a5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -806,7 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5986d822",
+   "id": "e9ac98f8",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -834,7 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "340338d3",
+   "id": "05cd766e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -865,7 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "109abbc0",
+   "id": "cf20ac39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85dfc462",
+   "id": "f4fdc13d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aec1bbaf",
+   "id": "11a7a627",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -943,7 +941,145 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c74aee6c",
+   "id": "9038fa22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "def lorenz_curve(observed_value, predicted_value, n_samples=1_000):\n",
+    "    \"\"\"Compute the Lorenz curve for a given true and predicted values.\"\"\"\n",
+    "\n",
+    "    def gini_index(cum_proportion_population, cum_proportion_y_true):\n",
+    "        from sklearn.metrics import auc\n",
+    "\n",
+    "        return 1 - 2 * auc(cum_proportion_population, cum_proportion_y_true)\n",
+    "\n",
+    "    observed_value = np.asarray(observed_value)\n",
+    "    predicted_value = np.asarray(predicted_value)\n",
+    "\n",
+    "    sort_idx = np.argsort(predicted_value)\n",
+    "    observed_value_sorted = observed_value[sort_idx]\n",
+    "\n",
+    "    original_n_samples = observed_value_sorted.shape[0]\n",
+    "    cum_proportion_population = np.cumsum(np.ones(original_n_samples))\n",
+    "    cum_proportion_population /= cum_proportion_population[-1]\n",
+    "\n",
+    "    cum_proportion_y_true = np.cumsum(observed_value_sorted)\n",
+    "    cum_proportion_y_true /= cum_proportion_y_true[-1]\n",
+    "\n",
+    "    gini_model = gini_index(cum_proportion_population, cum_proportion_y_true)\n",
+    "\n",
+    "    cum_proportion_population_interpolated = np.linspace(0, 1, n_samples)\n",
+    "    cum_proportion_y_true_interpolated = np.interp(\n",
+    "        cum_proportion_population_interpolated,\n",
+    "        cum_proportion_population,\n",
+    "        cum_proportion_y_true,\n",
+    "    )\n",
+    "\n",
+    "    return pl.DataFrame(\n",
+    "        {\n",
+    "            \"cum_population\": cum_proportion_population_interpolated,\n",
+    "            \"cum_observed\": cum_proportion_y_true_interpolated,\n",
+    "        }\n",
+    "    ).with_columns(\n",
+    "        pl.lit(gini_model).alias(\"gini_index\"),\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "def plot_lorenz_curve(cv_predictions, n_samples=1_000):\n",
+    "    \"\"\"Plot the Lorenz curve for a given true and predicted values.\"\"\"\n",
+    "\n",
+    "    results = []\n",
+    "    for cv_idx, predictions in enumerate(cv_predictions):\n",
+    "        results.append(\n",
+    "            lorenz_curve(\n",
+    "                observed_value=predictions[\"load_mw\"],\n",
+    "                predicted_value=predictions[\"predicted_load_mw\"],\n",
+    "                n_samples=n_samples,\n",
+    "            ).with_columns(\n",
+    "                pl.lit(cv_idx).alias(\"cv_idx\"),\n",
+    "                pl.lit(\"model\").alias(\"model\"),\n",
+    "            )\n",
+    "        )\n",
+    "\n",
+    "        results.append(\n",
+    "            lorenz_curve(\n",
+    "                observed_value=predictions[\"load_mw\"],\n",
+    "                predicted_value=predictions[\"load_mw\"],\n",
+    "                n_samples=n_samples,\n",
+    "            ).with_columns(\n",
+    "                pl.lit(cv_idx).alias(\"cv_idx\"),\n",
+    "                pl.lit(\"oracle\").alias(\"model\"),\n",
+    "            )\n",
+    "        )\n",
+    "\n",
+    "    results = pl.concat(results)\n",
+    "\n",
+    "    gini_stats = results.group_by(\"model\").agg(\n",
+    "        [\n",
+    "            pl.col(\"gini_index\")\n",
+    "            .mean()\n",
+    "            .map_elements(lambda x: f\"{x:.4f}\", return_dtype=pl.String)\n",
+    "            .alias(\"gini_mean\"),\n",
+    "            pl.col(\"gini_index\")\n",
+    "            .std()\n",
+    "            .map_elements(lambda x: f\"{x:.4f}\", return_dtype=pl.String)\n",
+    "            .alias(\"gini_std_dev\"),\n",
+    "        ]\n",
+    "    )\n",
+    "\n",
+    "    results = results.join(gini_stats, on=\"model\").with_columns(\n",
+    "        pl.format(\"{} ({} +/- {})\", \"model\", \"gini_mean\", \"gini_std_dev\").alias(\n",
+    "            \"model_label\"\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "    diagonal_chart = (\n",
+    "        altair.Chart(\n",
+    "            pl.DataFrame(\n",
+    "                {\n",
+    "                    \"cum_population\": [0, 1],\n",
+    "                    \"cum_observed\": [0, 1],\n",
+    "                    \"model_label\": \"Non-informative model\",\n",
+    "                }\n",
+    "            )\n",
+    "        )\n",
+    "        .mark_line(strokeDash=[4, 4], opacity=0.5, tooltip=True)\n",
+    "        .encode(\n",
+    "            x=altair.X(\n",
+    "                \"cum_population:Q\",\n",
+    "                title=\"Fraction of observations sorted by predicted label\",\n",
+    "            ),\n",
+    "            y=altair.Y(\"cum_observed:Q\", title=\"Cumulative observed load proportion\"),\n",
+    "            color=altair.Color(\"model_label:N\", legend=altair.Legend(title=\"Models\")),\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "    model_chart = (\n",
+    "        altair.Chart(results)\n",
+    "        .mark_line(opacity=0.3, tooltip=True)\n",
+    "        .encode(\n",
+    "            x=altair.X(\n",
+    "                \"cum_population:Q\",\n",
+    "                title=\"Fraction of observations sorted by predicted label\",\n",
+    "            ),\n",
+    "            y=altair.Y(\"cum_observed:Q\", title=\"Cumulative observed load proportion\"),\n",
+    "            color=altair.Color(\"model_label:N\", legend=altair.Legend(title=\"Models\")),\n",
+    "            detail=\"cv_idx:N\",\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "    return model_chart + diagonal_chart\n",
+    "\n",
+    "\n",
+    "plot_lorenz_curve(cv_predictions, n_samples=500).interactive()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0dee9b6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1027,7 +1163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c06c96f",
+   "id": "31e61852",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1110,8 +1246,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c4bf395",
-   "metadata": {},
+   "id": "a6fae992",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
     "def plot_residuals_by_month(cv_predictions):\n",
@@ -1193,7 +1331,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc5f5a1f",
+   "id": "d6350256",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ce122ac",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1215,7 +1363,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f5547bc",
+   "id": "99f29c71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1225,7 +1373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e58994c5",
+   "id": "c5e755ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1235,7 +1383,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "282ab81f",
+   "id": "05c99626",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1256,7 +1404,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5dc4b932",
+   "id": "af29c5c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1272,7 +1420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1eb9f88",
+   "id": "5dca5929",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1288,7 +1436,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f2bd129",
+   "id": "5c33950e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1302,7 +1450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be3296ed",
+   "id": "1b0c8fb4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1314,7 +1462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8452bbbd",
+   "id": "3092b010",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1330,7 +1478,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d493e28c",
+   "id": "9c4ee3d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1398,7 +1546,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4983de5c",
+   "id": "0027614d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1410,7 +1558,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04d7c40a",
+   "id": "47aecc41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1421,7 +1569,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a43b41e4",
+   "id": "9b3d1835",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1457,7 +1605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3c79489",
+   "id": "9c9c441a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1467,7 +1615,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0820985e",
+   "id": "55aeced8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1512,7 +1660,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cfaf7fa",
+   "id": "660fdc0c",
    "metadata": {},
    "outputs": [],
    "source": []
